--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -49,12 +49,18 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# Instalar dependências principais\n",
-    "!pip install -q fire gin_config lightning loguru musicdiff numpy opencv-python-headless Pillow\n",
-    "!pip install -q rich scikit-image timm torch torchinfo torchvision transformers datasets\n",
+    "# Corrigir incompatibilidade numpy/scipy primeiro\n",
+    "!pip install -q numpy==1.26.4 scipy==1.11.4\n",
+    "\n",
+    "# Instalar dependências principais com versões compatíveis\n",
+    "!pip install -q fire gin_config lightning==2.1.3 loguru musicdiff opencv-python-headless Pillow\n",
+    "!pip install -q rich scikit-image timm torchinfo transformers datasets\n",
     "\n",
     "# Instalar dependências para geração sintética\n",
     "!pip install -q verovio cairosvg names wonderwords\n",
+    "\n",
+    "# Instalar Wand para processamento de imagens (se necessário)\n",
+    "!pip install -q Wand\n",
     "\n",
     "# Verificar GPUs disponíveis\n",
     "import torch\n",
@@ -65,6 +71,33 @@
     "    for i in range(torch.cuda.device_count()):\n",
     "        print(f\"   GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
     "        print(f\"   Memory: {torch.cuda.get_device_properties(i).total_memory / 1024**3:.2f} GB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa619b5b",
+   "metadata": {},
+   "source": [
+    "### ⚠️ Solução Alternativa para Problemas de Dependências\n",
+    "\n",
+    "Se ainda houver erros de incompatibilidade, execute esta célula para reinstalar tudo do zero:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5012c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solução alternativa: reinstalar pacotes em ordem específica\n",
+    "!pip uninstall -y numpy scipy torchmetrics lightning\n",
+    "!pip install numpy==1.26.4\n",
+    "!pip install scipy==1.11.4\n",
+    "!pip install torchmetrics==1.2.0\n",
+    "!pip install lightning==2.1.3\n",
+    "\n",
+    "print(\"✅ Dependências reinstaladas com versões compatíveis\")"
    ]
   },
   {
