Fix: handle PIL image shape error in test cell

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -224,7 +224,9 @@
    "source": [
     "## 5️⃣ Teste Rápido de Carregamento de Dados\n",
     "\n",
-    "Antes de treinar, vamos testar se o dataset carrega corretamente com as otimizações."
+    "Antes de treinar, vamos testar se o dataset carrega corretamente com as otimizações.\n",
+    "\n",
+    "> ⚠️ **Nota**: Warnings do CUDA/cuDNN são normais no Kaggle e não afetam o funcionamento."
    ]
   },
   {
@@ -236,6 +238,7 @@
    "source": [
     "%%time\n",
     "import datasets\n",
+    "import numpy as np\n",
     "from data import prepare_fp_data\n",
     "\n",
     "# Teste de carregamento com otimizações\n",
@@ -260,12 +263,24 @@
     ")\n",
     "\n",
     "print(f\"✅ Processamento concluído!\")\n",
-    "print(f\"📏 Exemplo - Tamanho imagem: {processed_ds[0]['image'].shape}\")\n",
+    "\n",
+    "# Verificar tipo da imagem processada\n",
+    "sample_img = processed_ds[0]['image']\n",
+    "if isinstance(sample_img, np.ndarray):\n",
+    "    print(f\"📏 Exemplo - Tamanho imagem (numpy): {sample_img.shape}\")\n",
+    "else:\n",
+    "    # Se ainda for PIL, converter\n",
+    "    sample_img = np.array(sample_img)\n",
+    "    print(f\"📏 Exemplo - Tamanho imagem (convertida): {sample_img.shape}\")\n",
+    "\n",
     "print(f\"📝 Exemplo - Tamanho transcrição: {len(processed_ds[0]['transcription'])} tokens\")\n",
+    "print(f\"🎯 Tipo de imagem: {type(processed_ds[0]['image'])}\")\n",
     "\n",
     "# Limpar memória\n",
     "del test_ds, processed_ds\n",
-    "gc.collect()"
+    "gc.collect()\n",
+    "\n",
+    "print(\"\\n✅ Teste de carregamento bem-sucedido! O dataset está funcionando corretamente.\")"
    ]
   },
   {
