Fix: torch.version AttributeError - add proper PyTorch installation

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -52,6 +52,9 @@
     "# Corrigir incompatibilidade numpy/scipy primeiro\n",
     "!pip install -q numpy==1.26.4 scipy==1.11.4\n",
     "\n",
+    "# Instalar PyTorch com CUDA (versão estável para Kaggle)\n",
+    "!pip install -q torch==2.1.0 torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cu118\n",
+    "\n",
     "# Instalar dependências principais com versões compatíveis\n",
     "!pip install -q fire gin_config lightning==2.1.3 loguru musicdiff opencv-python-headless Pillow\n",
     "!pip install -q rich scikit-image timm torchinfo transformers datasets\n",
@@ -66,11 +69,15 @@
     "import torch\n",
     "print(f\"🔥 PyTorch version: {torch.__version__}\")\n",
     "print(f\"🎮 CUDA available: {torch.cuda.is_available()}\")\n",
-    "print(f\"🎮 Number of GPUs: {torch.cuda.device_count()}\")\n",
+    "\n",
     "if torch.cuda.is_available():\n",
+    "    print(f\"🎮 CUDA version: {torch.version.cuda}\")\n",
+    "    print(f\"🎮 Number of GPUs: {torch.cuda.device_count()}\")\n",
     "    for i in range(torch.cuda.device_count()):\n",
     "        print(f\"   GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
-    "        print(f\"   Memory: {torch.cuda.get_device_properties(i).total_memory / 1024**3:.2f} GB\")"
+    "        print(f\"   Memory: {torch.cuda.get_device_properties(i).total_memory / 1024**3:.2f} GB\")\n",
+    "else:\n",
+    "    print(\"⚠️ CUDA não disponível - verifique se o acelerador GPU está habilitado no Kaggle\")"
    ]
   },
   {
@@ -91,13 +98,25 @@
    "outputs": [],
    "source": [
     "# Solução alternativa: reinstalar pacotes em ordem específica\n",
-    "!pip uninstall -y numpy scipy torchmetrics lightning\n",
+    "print(\"🔄 Desinstalando pacotes conflitantes...\")\n",
+    "!pip uninstall -y numpy scipy torch torchvision torchmetrics lightning\n",
+    "\n",
+    "print(\"\\n📦 Instalando versões compatíveis...\")\n",
     "!pip install numpy==1.26.4\n",
     "!pip install scipy==1.11.4\n",
+    "!pip install torch==2.1.0 torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cu118\n",
     "!pip install torchmetrics==1.2.0\n",
     "!pip install lightning==2.1.3\n",
     "\n",
-    "print(\"✅ Dependências reinstaladas com versões compatíveis\")"
+    "print(\"\\n✅ Dependências reinstaladas com versões compatíveis\")\n",
+    "\n",
+    "# Verificar instalação\n",
+    "import torch\n",
+    "print(f\"\\n🎯 PyTorch: {torch.__version__}\")\n",
+    "print(f\"🎯 CUDA: {torch.cuda.is_available()}\")\n",
+    "if torch.cuda.is_available():\n",
+    "    print(f\"🎯 CUDA version: {torch.version.cuda}\")\n",
+    "    print(f\"🎯 GPUs: {torch.cuda.device_count()}\")"
    ]
   },
   {
@@ -198,6 +217,7 @@
    "source": [
     "import psutil\n",
     "import gc\n",
+    "import torch\n",
     "\n",
     "# Verificar RAM disponível\n",
     "ram = psutil.virtual_memory()\n",
@@ -210,11 +230,24 @@
     "    torch.cuda.empty_cache()\n",
     "    gc.collect()\n",
     "    \n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        print(f\"\\n🎮 GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
-    "        print(f\"   Memória Alocada: {torch.cuda.memory_allocated(i) / 1024**3:.2f} GB\")\n",
-    "        print(f\"   Memória Reservada: {torch.cuda.memory_reserved(i) / 1024**3:.2f} GB\")\n",
-    "        print(f\"   Memória Livre: {(torch.cuda.get_device_properties(i).total_memory - torch.cuda.memory_allocated(i)) / 1024**3:.2f} GB\")"
+    "    try:\n",
+    "        num_gpus = torch.cuda.device_count()\n",
+    "        print(f\"\\n🎮 Detectadas {num_gpus} GPU(s)\")\n",
+    "        \n",
+    "        for i in range(num_gpus):\n",
+    "            print(f\"\\n🎮 GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
+    "            print(f\"   Memória Alocada: {torch.cuda.memory_allocated(i) / 1024**3:.2f} GB\")\n",
+    "            print(f\"   Memória Reservada: {torch.cuda.memory_reserved(i) / 1024**3:.2f} GB\")\n",
+    "            total_memory = torch.cuda.get_device_properties(i).total_memory\n",
+    "            allocated = torch.cuda.memory_allocated(i)\n",
+    "            print(f\"   Memória Livre: {(total_memory - allocated) / 1024**3:.2f} GB\")\n",
+    "            print(f\"   Memória Total: {total_memory / 1024**3:.2f} GB\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Erro ao obter informações da GPU: {e}\")\n",
+    "        print(\"   Isso pode ser resolvido reiniciando o kernel ou reinstalando PyTorch\")\n",
+    "else:\n",
+    "    print(\"\\n⚠️ CUDA não disponível\")\n",
+    "    print(\"   Verifique se o acelerador GPU está habilitado nas configurações do Kaggle\")"
    ]
   },
   {
