Fix: torchaudio conflict - use Kaggle native PyTorch

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -38,7 +38,9 @@
    "source": [
     "## 1️⃣ Instalação de Dependências\n",
     "\n",
-    "Primeiro, vamos instalar todas as bibliotecas necessárias."
+    "Primeiro, vamos instalar todas as bibliotecas necessárias.\n",
+    "\n",
+    "> 💡 **Nota**: O Kaggle já tem PyTorch pré-instalado. Vamos usar a versão nativa para evitar conflitos."
    ]
   },
   {
@@ -52,8 +54,8 @@
     "# Corrigir incompatibilidade numpy/scipy primeiro\n",
     "!pip install -q numpy==1.26.4 scipy==1.11.4\n",
     "\n",
-    "# Instalar PyTorch com CUDA (versão estável para Kaggle)\n",
-    "!pip install -q torch==2.1.0 torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cu118\n",
+    "# O Kaggle já tem PyTorch instalado, vamos usar a versão nativa\n",
+    "# Se precisar reinstalar, use a célula alternativa abaixo\n",
     "\n",
     "# Instalar dependências principais com versões compatíveis\n",
     "!pip install -q fire gin_config lightning==2.1.3 loguru musicdiff opencv-python-headless Pillow\n",
@@ -71,11 +73,15 @@
     "print(f\"🎮 CUDA available: {torch.cuda.is_available()}\")\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"🎮 CUDA version: {torch.version.cuda}\")\n",
-    "    print(f\"🎮 Number of GPUs: {torch.cuda.device_count()}\")\n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        print(f\"   GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
-    "        print(f\"   Memory: {torch.cuda.get_device_properties(i).total_memory / 1024**3:.2f} GB\")\n",
+    "    try:\n",
+    "        print(f\"🎮 CUDA version: {torch.version.cuda}\")\n",
+    "        print(f\"🎮 Number of GPUs: {torch.cuda.device_count()}\")\n",
+    "        for i in range(torch.cuda.device_count()):\n",
+    "            print(f\"   GPU {i}: {torch.cuda.get_device_name(i)}\")\n",
+    "            print(f\"   Memory: {torch.cuda.get_device_properties(i).total_memory / 1024**3:.2f} GB\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Erro ao verificar CUDA: {e}\")\n",
+    "        print(\"   Tente reiniciar o kernel\")\n",
     "else:\n",
     "    print(\"⚠️ CUDA não disponível - verifique se o acelerador GPU está habilitado no Kaggle\")"
    ]
@@ -85,9 +91,10 @@
    "id": "aa619b5b",
    "metadata": {},
    "source": [
-    "### ⚠️ Solução Alternativa para Problemas de Dependências\n",
+    "### ⚠️ Solução Alternativa: Reinstalar PyTorch (Apenas se necessário)\n",
     "\n",
-    "Se ainda houver erros de incompatibilidade, execute esta célula para reinstalar tudo do zero:"
+    "**⚠️ AVISO**: O Kaggle já tem PyTorch instalado. Use esta célula **APENAS** se tiver erros relacionados ao torch.\n",
+    "Esta célula remove o torchaudio conflitante e reinstala PyTorch."
    ]
   },
   {
@@ -97,26 +104,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solução alternativa: reinstalar pacotes em ordem específica\n",
-    "print(\"🔄 Desinstalando pacotes conflitantes...\")\n",
-    "!pip uninstall -y numpy scipy torch torchvision torchmetrics lightning\n",
+    "# ⚠️ USE APENAS SE HOUVER ERROS COM TORCH!\n",
+    "# Solução: remover torchaudio e usar PyTorch nativo do Kaggle\n",
     "\n",
-    "print(\"\\n📦 Instalando versões compatíveis...\")\n",
-    "!pip install numpy==1.26.4\n",
-    "!pip install scipy==1.11.4\n",
-    "!pip install torch==2.1.0 torchvision==0.16.0 --index-url https://download.pytorch.org/whl/cu118\n",
-    "!pip install torchmetrics==1.2.0\n",
-    "!pip install lightning==2.1.3\n",
+    "print(\"🔄 Removendo torchaudio conflitante...\")\n",
+    "!pip uninstall -y torchaudio\n",
     "\n",
-    "print(\"\\n✅ Dependências reinstaladas com versões compatíveis\")\n",
+    "print(\"\\n🔄 Verificando dependências...\")\n",
+    "!pip install -q numpy==1.26.4 scipy==1.11.4\n",
+    "!pip install -q torchmetrics==1.2.0\n",
+    "!pip install -q lightning==2.1.3\n",
+    "\n",
+    "print(\"\\n✅ Dependências ajustadas\")\n",
     "\n",
     "# Verificar instalação\n",
     "import torch\n",
     "print(f\"\\n🎯 PyTorch: {torch.__version__}\")\n",
     "print(f\"🎯 CUDA: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"🎯 CUDA version: {torch.version.cuda}\")\n",
-    "    print(f\"🎯 GPUs: {torch.cuda.device_count()}\")"
+    "    try:\n",
+    "        print(f\"🎯 CUDA version: {torch.version.cuda}\")\n",
+    "        print(f\"🎯 GPUs: {torch.cuda.device_count()}\")\n",
+    "    except:\n",
+    "        print(\"⚠️ Reinicie o kernel após executar esta célula\")"
    ]
   },
   {
