Fix: cv2.resize PIL error + use PRAIG/grandstaff dataset + correct branch to master

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -150,8 +150,8 @@
     "!git clone https://github.com/gasbiru/SMT.git\n",
     "%cd SMT\n",
     "\n",
-    "# Atualizar com últimas alterações do remoto\n",
-    "!git pull origin main\n",
+    "# Atualizar com últimas alterações do remoto (branch master)\n",
+    "!git pull origin master\n",
     "\n",
     "# Criar diretórios necessários\n",
     "!mkdir -p /kaggle/working/checkpoints\n",
@@ -181,9 +181,10 @@
     "import json\n",
     "\n",
     "# Configuração otimizada para Kaggle com 2 GPUs e 30GB RAM\n",
+    "# Usando dataset PRAIG/grandstaff (versão reduzida e otimizada)\n",
     "kaggle_config = {\n",
     "    \"data\": {\n",
-    "        \"data_path\": \"antoniorv6/full-page-grandstaff\",\n",
+    "        \"data_path\": \"PRAIG/grandstaff\",  # Dataset otimizado\n",
     "        \"batch_size\": 2,  # Batch por GPU (total = 2*2 = 4)\n",
     "        \"vocab_name\": \"FP_GrandStaff_BeKern\",\n",
     "        \"num_workers\": 4,  # Otimizado para 2 GPUs\n",
@@ -285,9 +286,10 @@
     "from data import prepare_fp_data\n",
     "\n",
     "# Teste de carregamento com otimizações\n",
-    "print(\"📥 Testando carregamento do dataset...\")\n",
+    "# Usando PRAIG/grandstaff (dataset reduzido e otimizado)\n",
+    "print(\"📥 Testando carregamento do dataset PRAIG/grandstaff...\")\n",
     "test_ds = datasets.load_dataset(\n",
-    "    \"antoniorv6/full-page-grandstaff\", \n",
+    "    \"PRAIG/grandstaff\", \n",
     "    split=\"train[:10]\",  # Apenas 10 amostras para teste\n",
     "    trust_remote_code=False\n",
     ")\n",
@@ -323,7 +325,8 @@
     "del test_ds, processed_ds\n",
     "gc.collect()\n",
     "\n",
-    "print(\"\\n✅ Teste de carregamento bem-sucedido! O dataset está funcionando corretamente.\")"
+    "print(\"\\n✅ Teste de carregamento bem-sucedido! O dataset está funcionando corretamente.\")\n",
+    "print(\"🎯 Dataset PRAIG/grandstaff carregado com sucesso!\")"
    ]
   },
   {
@@ -626,8 +629,8 @@
     "# Fazer commit\n",
     "!git commit -m \"✨ Otimizações para Kaggle: fix Map freeze, multi-GPU, memory optimization\"\n",
     "\n",
-    "# Push para o repositório\n",
-    "!git push origin main\n",
+    "# Push para o repositório (branch master)\n",
+    "!git push origin master\n",
     "\n",
     "print(\"✅ Alterações enviadas para o GitHub!\")"
    ]
