Fix: prevent nested SMT folders + force reload data module

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -146,19 +146,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone o repositório e faça pull das últimas alterações\n",
-    "!git clone https://github.com/gasbiru/SMT.git\n",
-    "%cd SMT\n",
+    "import os\n",
     "\n",
-    "# Atualizar com últimas alterações do remoto (branch master)\n",
-    "!git pull origin master\n",
+    "# Verificar se já estamos dentro do repositório ou se ele já existe\n",
+    "if os.path.exists('/kaggle/working/SMT'):\n",
+    "    print(\"📂 Repositório já existe, atualizando...\")\n",
+    "    %cd /kaggle/working/SMT\n",
+    "    !git pull origin master\n",
+    "elif os.path.exists('/kaggle/working/SMT/SMT'):\n",
+    "    print(\"⚠️ Estrutura aninhada detectada, corrigindo...\")\n",
+    "    %cd /kaggle/working\n",
+    "    !rm -rf SMT\n",
+    "    !git clone https://github.com/gasbiru/SMT.git\n",
+    "    %cd SMT\n",
+    "else:\n",
+    "    print(\"📥 Clonando repositório...\")\n",
+    "    %cd /kaggle/working\n",
+    "    !git clone https://github.com/gasbiru/SMT.git\n",
+    "    %cd SMT\n",
     "\n",
     "# Criar diretórios necessários\n",
     "!mkdir -p /kaggle/working/checkpoints\n",
     "!mkdir -p vocab\n",
     "\n",
-    "# Verificar estrutura\n",
-    "!ls -la"
+    "# Verificar estrutura e localização\n",
+    "print(f\"\\n📍 Diretório atual: {os.getcwd()}\")\n",
+    "!ls -la | head -20"
    ]
   },
   {
@@ -270,7 +283,8 @@
     "\n",
     "Antes de treinar, vamos testar se o dataset carrega corretamente com as otimizações.\n",
     "\n",
-    "> ⚠️ **Nota**: Warnings do CUDA/cuDNN são normais no Kaggle e não afetam o funcionamento."
+    "> ⚠️ **Nota**: Warnings do CUDA/cuDNN são normais no Kaggle e não afetam o funcionamento.\n",
+    "> 💡 **Importante**: Se der erro, reinicie o kernel e execute novamente para garantir que o código atualizado seja carregado."
    ]
   },
   {
@@ -281,8 +295,16 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "import sys\n",
+    "import importlib\n",
     "import datasets\n",
     "import numpy as np\n",
+    "\n",
+    "# Forçar reload do módulo data para garantir versão atualizada\n",
+    "if 'data' in sys.modules:\n",
+    "    importlib.reload(sys.modules['data'])\n",
+    "    print(\"🔄 Módulo 'data' recarregado\")\n",
+    "\n",
     "from data import prepare_fp_data\n",
     "\n",
     "# Teste de carregamento com otimizações\n",
@@ -296,6 +318,7 @@
     "\n",
     "print(f\"✅ Dataset carregado: {len(test_ds)} amostras\")\n",
     "print(f\"📊 Colunas: {test_ds.column_names}\")\n",
+    "print(f\"🎯 Tipo de imagem original: {type(test_ds[0]['image'])}\")\n",
     "\n",
     "# Testar processamento com num_proc=1\n",
     "print(\"\\n🔄 Testando processamento com num_proc=1...\")\n",
@@ -313,13 +336,15 @@
     "sample_img = processed_ds[0]['image']\n",
     "if isinstance(sample_img, np.ndarray):\n",
     "    print(f\"📏 Exemplo - Tamanho imagem (numpy): {sample_img.shape}\")\n",
+    "    print(f\"📏 Exemplo - Dtype: {sample_img.dtype}\")\n",
     "else:\n",
     "    # Se ainda for PIL, converter\n",
+    "    print(f\"⚠️ Imagem ainda é {type(sample_img)}, convertendo...\")\n",
     "    sample_img = np.array(sample_img)\n",
     "    print(f\"📏 Exemplo - Tamanho imagem (convertida): {sample_img.shape}\")\n",
     "\n",
     "print(f\"📝 Exemplo - Tamanho transcrição: {len(processed_ds[0]['transcription'])} tokens\")\n",
-    "print(f\"🎯 Tipo de imagem: {type(processed_ds[0]['image'])}\")\n",
+    "print(f\"🎯 Tipo de imagem após processamento: {type(processed_ds[0]['image'])}\")\n",
     "\n",
     "# Limpar memória\n",
     "del test_ds, processed_ds\n",
