Fix: use num_proc=None to avoid multiprocessing serialization issues with numpy arrays

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -320,12 +320,13 @@
     "print(f\"📊 Colunas: {test_ds.column_names}\")\n",
     "print(f\"🎯 Tipo de imagem original: {type(test_ds[0]['image'])}\")\n",
     "\n",
-    "# Testar processamento com num_proc=1\n",
-    "print(\"\\n🔄 Testando processamento com num_proc=1...\")\n",
+    "# Testar processamento SEM multiprocessing (num_proc=None)\n",
+    "# Isso evita problemas de serialização com numpy arrays\n",
+    "print(\"\\n🔄 Testando processamento SEM multiprocessing...\")\n",
     "processed_ds = test_ds.map(\n",
     "    prepare_fp_data,\n",
     "    fn_kwargs={\"reduce_ratio\": 0.5, \"krn_format\": \"bekern\"},\n",
-    "    num_proc=1,  # Otimizado!\n",
+    "    num_proc=None,  # Desabilita multiprocessing - IMPORTANTE!\n",
     "    writer_batch_size=100,\n",
     "    load_from_cache_file=True\n",
     ")\n",
@@ -351,7 +352,8 @@
     "gc.collect()\n",
     "\n",
     "print(\"\\n✅ Teste de carregamento bem-sucedido! O dataset está funcionando corretamente.\")\n",
-    "print(\"🎯 Dataset PRAIG/grandstaff carregado com sucesso!\")"
+    "print(\"🎯 Dataset PRAIG/grandstaff carregado com sucesso!\")\n",
+    "print(\"\\n💡 Nota: Usamos num_proc=None (sem multiprocessing) para evitar problemas de serialização.\")"
    ]
   },
   {
