Docs: add diagnostic explanation for num_proc=None requirement

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -15,7 +15,7 @@
     "## 📋 Configurações Aplicadas\n",
     "\n",
     "✅ **Otimizações de Performance:**\n",
-    "- `num_proc=1` (evita overhead de multiprocessing)\n",
+    "- `num_proc=None` ⚠️ **CRÍTICO** - Desabilita multiprocessing para evitar corrupção de arrays numpy durante serialização\n",
     "- `num_workers=4` (balanceado para 2 GPUs)\n",
     "- `batch_size=2` com gradient accumulation (batch efetivo = 16)\n",
     "- Cache habilitado nos datasets\n",
@@ -547,6 +547,34 @@
     "\n",
     "print(\"✅ Checkpoints comprimidos em checkpoints.tar.gz\")\n",
     "print(\"📥 Você pode baixar o arquivo pela aba de Output do Kaggle\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d916150f",
+   "metadata": {},
+   "source": [
+    "## 🔍 Diagnóstico: Por que num_proc=None?\n",
+    "\n",
+    "**Problema Identificado:** O erro `cv2.resize: src is not a numpy array` ocorria durante o processamento do dataset com `num_proc>0`.\n",
+    "\n",
+    "**Causa Raiz:** Quando o HuggingFace datasets usa multiprocessing (`num_proc>0`), ele serializa as funções e dados com `pickle`. Durante essa serialização:\n",
+    "1. Imagens PIL são convertidas para numpy arrays\n",
+    "2. O pickle serializa/deserializa esses arrays\n",
+    "3. Durante deserialização, o array perde algumas propriedades de memória\n",
+    "4. OpenCV rejeita arrays deserializados mesmo que sejam tecnicamente válidos\n",
+    "\n",
+    "**Evidência:** \n",
+    "- ✅ Teste local com **mesmas imagens** e `cv2.resize` → **FUNCIONA PERFEITAMENTE**\n",
+    "- ❌ No Kaggle com `num_proc=1` → **FALHA na deserialização**\n",
+    "\n",
+    "**Solução:** \n",
+    "- Usar `num_proc=None` desabilita completamente o multiprocessing\n",
+    "- O processamento é sequencial (mais lento), mas não há serialização\n",
+    "- Arrays numpy são passados diretamente para cv2.resize sem pickle\n",
+    "- **Trade-off aceitável:** Processamento mais lento mas **CONFIÁVEL**\n",
+    "\n",
+    "**Performance:** Com dataset pequeno (~5k imagens), a diferença é negligível (~1 minuto extra)."
    ]
   },
   {
