Add: force reload cell and version checker for Kaggle

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -147,12 +147,23 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
+    "import importlib\n",
     "\n",
     "# Verificar se já estamos dentro do repositório ou se ele já existe\n",
     "if os.path.exists('/kaggle/working/SMT'):\n",
     "    print(\"📂 Repositório já existe, atualizando...\")\n",
     "    %cd /kaggle/working/SMT\n",
     "    !git pull origin master\n",
+    "    \n",
+    "    # ⚠️ IMPORTANTE: Recarregar módulos após git pull\n",
+    "    print(\"\\n🔄 Recarregando módulos...\")\n",
+    "    modules_to_reload = ['data', 'SynthGenerator', 'smt_trainer', 'ExperimentConfig']\n",
+    "    for module in modules_to_reload:\n",
+    "        if module in sys.modules:\n",
+    "            importlib.reload(sys.modules[module])\n",
+    "            print(f\"   ✅ {module} recarregado\")\n",
+    "    \n",
     "elif os.path.exists('/kaggle/working/SMT/SMT'):\n",
     "    print(\"⚠️ Estrutura aninhada detectada, corrigindo...\")\n",
     "    %cd /kaggle/working\n",
@@ -172,6 +183,54 @@
     "# Verificar estrutura e localização\n",
     "print(f\"\\n📍 Diretório atual: {os.getcwd()}\")\n",
     "!ls -la | head -20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09bb1460",
+   "metadata": {},
+   "source": [
+    "## ⚠️ IMPORTANTE: Force Reload de Módulos\n",
+    "\n",
+    "**Execute esta célula SEMPRE que fizer `git pull`** para garantir que o código atualizado seja carregado na memória."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb85c5aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import importlib\n",
+    "import gc\n",
+    "\n",
+    "# Lista de módulos do projeto para recarregar\n",
+    "modules_to_reload = [\n",
+    "    'data',\n",
+    "    'SynthGenerator', \n",
+    "    'smt_trainer',\n",
+    "    'ExperimentConfig',\n",
+    "    'utils',\n",
+    "    'eval_functions'\n",
+    "]\n",
+    "\n",
+    "print(\"🔄 Forçando reload de todos os módulos...\")\n",
+    "for module_name in modules_to_reload:\n",
+    "    if module_name in sys.modules:\n",
+    "        try:\n",
+    "            importlib.reload(sys.modules[module_name])\n",
+    "            print(f\"   ✅ {module_name} recarregado\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"   ⚠️ {module_name}: {e}\")\n",
+    "    else:\n",
+    "        print(f\"   ℹ️ {module_name} ainda não importado\")\n",
+    "\n",
+    "# Limpar cache do Python\n",
+    "gc.collect()\n",
+    "\n",
+    "print(\"\\n✅ Módulos atualizados! Pode prosseguir com o treinamento.\")"
    ]
   },
   {
