Critical: add dataset_fraction=0.25 to notebook config cell

--- a/kaggle_training_notebook.ipynb
+++ b/kaggle_training_notebook.ipynb
@@ -261,7 +261,8 @@
     "        \"vocab_name\": \"FP_GrandStaff_BeKern\",\n",
     "        \"num_workers\": 4,  # Otimizado para 2 GPUs\n",
     "        \"krn_format\": \"bekern\",\n",
-    "        \"reduce_ratio\": 0.5  # Reduz imagens pela metade para economizar memória\n",
+    "        \"reduce_ratio\": 0.5,  # Reduz imagens pela metade para economizar memória\n",
+    "        \"dataset_fraction\": 0.25  # 🎯 USAR APENAS 25% DO DATASET PARA TESTES RÁPIDOS\n",
     "    },\n",
     "    \"checkpoint\": {\n",
     "        \"filename\": \"SMT-Kaggle-best\",\n",
@@ -274,10 +275,14 @@
     "}\n",
     "\n",
     "# Salvar configuração\n",
+    "import os\n",
+    "os.makedirs('config/FP-GrandStaff', exist_ok=True)\n",
+    "\n",
     "with open('config/FP-GrandStaff/kaggle_config.json', 'w') as f:\n",
     "    json.dump(kaggle_config, f, indent=2)\n",
     "\n",
-    "print(\"✅ Configuração criada:\")\n",
+    "print(\"✅ Configuração salva em config/FP-GrandStaff/kaggle_config.json\")\n",
+    "print(\"\\n📋 Configuração:\")\n",
     "print(json.dumps(kaggle_config, indent=2))"
    ]
   },
